--- a/style/class&ID.css
+++ b/style/class&ID.css
@@ -47,6 +47,7 @@ nav ul{
     list-style: none;
     font-weight: bold;
     font-size: 1.2em;
+    width: 100%;
 }
 nav ul li a:hover {
     color: black;
