--- a/style/class&ID.css
+++ b/style/class&ID.css
@@ -43,7 +43,7 @@ a {
 }
 nav ul{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     list-style: none;
     font-weight: bold;
     font-size: 1.2em;
