--- a/style/class&ID.css
+++ b/style/class&ID.css
@@ -41,7 +41,7 @@ a {
     color: rgb(63, 62, 62);
     text-decoration: none;
 }
-nav ul{
+main nav ul{
     display: flex;
     justify-content: space-around;
     list-style: none;
