--- a/style/class&ID.css
+++ b/style/class&ID.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: 'Roboto Condensed', sans-serif;
-    background-color: rgb(24, 24, 24);
+    background-color: #181818;
 }
 main {
     background-color: white;
@@ -43,12 +43,13 @@ a {
 }
 main nav ul{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     list-style: none;
     font-weight: bold;
     font-size: 1.2em;
-    width: 100%;
-}
+    width: 90%;
+    Margin : auto;
+} 
 nav ul li a:hover {
     color: black;
 }
