--- a/style/class&ID.css
+++ b/style/class&ID.css
@@ -43,7 +43,7 @@ a {
 }
 main nav ul{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     list-style: none;
     font-weight: bold;
     font-size: 1.2em;
