--- a/style/class&ID.css
+++ b/style/class&ID.css
@@ -41,14 +41,16 @@ a {
     color: rgb(63, 62, 62);
     text-decoration: none;
 }
-main nav ul{
-    display: flex;
-    justify-content: space-around;
-    list-style: none;
+main nav {
     font-weight: bold;
     font-size: 1.2em;
-    width: 90%;
-    Margin : auto;
+    margin-left: 0;
+
+}
+main nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
 } 
 nav ul li a:hover {
     color: black;
