--- a/style/class&ID.css
+++ b/style/class&ID.css
@@ -51,6 +51,7 @@ main nav ul {
     list-style: none;
     display: flex;
     justify-content: space-around;
+    padding-left: 0;
 } 
 nav ul li a:hover {
     color: black;
